# GP-MC8

./: CMakeLists.txt  MC6PRO_Bank_GigPerformer Extension.json  MC8.pptx  MC8PRO_Bank_for_GigPerformer_Extension.json  MC8_Bank_GigPerformer Extension.json  Preset CCs.xlsx  README.md  WidgetNaming.txt  ~$Preset CCs.xlsx
.github/workflows/: build.yaml
cmake/: dependencies.cmake
src/: Buttons.cpp  Display.cpp  General_Utils.cpp  General_Utils.h  Inputs.cpp  Knobs.cpp  LibMain.cpp  LibMain.h  MC8_Buttons.h  MC8_Classes.h  MC8_Constructs.h  Songlist.cpp
